Docker demo configuration

--- a/ClusterKit.Core/ClusterKit.Core.Service/akka.config
+++ b/ClusterKit.Core/ClusterKit.Core.Service/akka.config
@@ -9,6 +9,7 @@
         tcp {
           hostname = 127.0.0.1
           port = 0
+          // 3090 - default port for seeds
         }
       }
     }
