--- a/Docker/ClusterKitDemoWorker/Dockerfile
+++ b/Docker/ClusterKitDemoWorker/Dockerfile
@@ -1,5 +1,6 @@
 FROM clusterkit/baseworker:latest
 MAINTAINER Mikhail Kantarovskiy <kantoramob@gmail.com>
+EXPOSE 3090
 WORKDIR /opt/clusterkit/
 COPY build/* /opt/clusterkit/
 ENTRYPOINT mono ClusterKit.Core.Service.exe
