--- a/Docker/ClusterKitBaseWebNode/Dockerfile
+++ b/Docker/ClusterKitBaseWebNode/Dockerfile
@@ -1,10 +1,6 @@
-FROM ubuntu:14.04
+FROM clusterkit/baseworker:latest
 MAINTAINER Mikhail Kantarovskiy <kantoramob@gmail.com>
-RUN apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys 3FA7E0328081BFF6A14DA29AA6A19B38D3D831EF
-RUN echo "deb http://download.mono-project.com/repo/debian wheezy main" | sudo tee /etc/apt/sources.list.d/mono-xamarin.list
 RUN apt-get update && apt-get install -y \
-	joe \
-	mono-complete \
 	nginx
 EXPOSE 80
 
