--- a/ClusterKit.Web/ClusterKit.Web/packages.config
+++ b/ClusterKit.Web/ClusterKit.Web/packages.config
@@ -8,19 +8,22 @@
   <package id="Akka.Remote" version="1.0.6" targetFramework="net45" />
   <package id="Castle.Core" version="3.3.3" targetFramework="net46" />
   <package id="Castle.Windsor" version="3.3.0" targetFramework="net46" />
-  <package id="ClusterKit.Core" version="0.0.0.52-master" targetFramework="net45" />
+  <package id="ClusterKit.Core" version="0.0.0.61-master" targetFramework="net45" />
   <package id="CommonServiceLocator" version="1.3" targetFramework="net46" />
   <package id="Google.ProtocolBuffers" version="2.4.1.555" targetFramework="net46" />
   <package id="Helios" version="1.4.2" targetFramework="net45" />
   <package id="JetBrains.Annotations" version="10.1.2-eap" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Cors" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net46" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net46" />
+  <package id="Microsoft.AspNet.WebApi.Cors" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Owin" version="5.2.3" targetFramework="net46" />
   <package id="Microsoft.AspNet.WebApi.OwinSelfHost" version="5.2.3" targetFramework="net46" />
   <package id="Microsoft.Bcl.Immutable" version="1.0.34" targetFramework="net46" />
   <package id="Microsoft.Owin" version="3.0.1" targetFramework="net46" />
   <package id="Microsoft.Owin.Host.HttpListener" version="3.0.1" targetFramework="net46" />
   <package id="Microsoft.Owin.Hosting" version="3.0.1" targetFramework="net46" />
+  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="8.0.2" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net46" />
   <package id="Rx-Core" version="2.3.0-beta2" targetFramework="net46" requireReinstallation="true" />
@@ -28,6 +31,7 @@
   <package id="Rx-Linq" version="2.3.0-beta2" targetFramework="net46" requireReinstallation="true" />
   <package id="Serilog" version="1.5.14" targetFramework="net45" />
   <package id="StackExchange.Redis" version="1.1.572-alpha" targetFramework="net45" />
+  <package id="Swashbuckle.Core.Net45" version="5.2.1" targetFramework="net45" />
   <package id="System.Collections" version="4.0.0" targetFramework="net45" />
   <package id="System.Collections.Immutable" version="1.1.37" targetFramework="net45" />
   <package id="System.Diagnostics.Debug" version="4.0.0" targetFramework="net45" />
@@ -37,4 +41,5 @@
   <package id="System.Runtime" version="4.0.0" targetFramework="net45" />
   <package id="System.Runtime.Extensions" version="4.0.0" targetFramework="net45" />
   <package id="System.Threading" version="4.0.0" targetFramework="net45" />
+  <package id="WebActivator" version="1.5.1" targetFramework="net45" />
 </packages>
