--- a/ClusterKit.Monitoring/ClusterKit.Monitoring.Tests/ClusterKit.Monitoring.Tests.csproj
+++ b/ClusterKit.Monitoring/ClusterKit.Monitoring.Tests/ClusterKit.Monitoring.Tests.csproj
@@ -85,9 +85,9 @@
       <HintPath>..\..\packages\Castle.Windsor.3.3.0\lib\net45\Castle.Windsor.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="ClusterKit.Core, Version=0.0.0.61, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="ClusterKit.Core">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\packages\ClusterKit.Core.0.0.0.61-master\lib\ClusterKit.Core.dll</HintPath>
+      <HintPath>D:\Dropbox\Sources\Git\ClusterKit\build\clean\ClusterKit.Core\ClusterKit.Core.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="ClusterKit.Core.TestKit, Version=0.0.0.61, Culture=neutral, processorArchitecture=MSIL">
