--- a/ClusterKit.Monitoring/ClusterKit.Monitoring/ClusterKit.Monitoring.csproj
+++ b/ClusterKit.Monitoring/ClusterKit.Monitoring/ClusterKit.Monitoring.csproj
@@ -73,23 +73,23 @@
       <HintPath>..\..\packages\Castle.Windsor.3.3.0\lib\net45\Castle.Windsor.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="ClusterKit.Core, Version=0.0.0.61, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="ClusterKit.Core">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\packages\ClusterKit.Core.0.0.0.61-master\lib\ClusterKit.Core.dll</HintPath>
+      <HintPath>D:\Dropbox\Sources\Git\ClusterKit\build\clean\ClusterKit.Core\ClusterKit.Core.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="ClusterKit.Web, Version=0.0.0.61, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="ClusterKit.Web">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\packages\ClusterKit.Web.0.0.0.61-master\lib\ClusterKit.Web.dll</HintPath>
+      <HintPath>D:\Dropbox\Sources\Git\ClusterKit\build\clean\ClusterKit.Web\ClusterKit.Web.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="ClusterKit.Web.Client, Version=0.0.0.61, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="ClusterKit.Web.Client">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\packages\ClusterKit.Web.0.0.0.61-master\lib\ClusterKit.Web.Client.dll</HintPath>
+      <HintPath>D:\Dropbox\Sources\Git\ClusterKit\build\clean\ClusterKit.Web.Client\ClusterKit.Web.Client.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="ClusterKit.Web.SignalR">
-      <HintPath>..\..\packages\ClusterKit.Web.SignalR.0.0.0.59-master\lib\ClusterKit.Web.SignalR.dll</HintPath>
+      <HintPath>D:\Dropbox\Sources\Git\ClusterKit\build\clean\ClusterKit.Web.SignalR\ClusterKit.Web.SignalR.dll</HintPath>
     </Reference>
     <Reference Include="Google.ProtocolBuffers, Version=2.4.1.555, Culture=neutral, PublicKeyToken=55f7125234beb589, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
