--- a/ClusterKit.Web/ClusterKit.Web.Tests/ClusterKit.Web.Tests.csproj
+++ b/ClusterKit.Web/ClusterKit.Web.Tests/ClusterKit.Web.Tests.csproj
@@ -93,9 +93,9 @@
       <HintPath>..\..\packages\Castle.Windsor.3.3.0\lib\net45\Castle.Windsor.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="ClusterKit.Core, Version=0.0.0.61, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="ClusterKit.Core">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\packages\ClusterKit.Core.0.0.0.61-master\lib\ClusterKit.Core.dll</HintPath>
+      <HintPath>D:\Dropbox\Sources\Git\ClusterKit\build\clean\ClusterKit.Core\ClusterKit.Core.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="ClusterKit.Core.TestKit, Version=0.0.0.61, Culture=neutral, processorArchitecture=MSIL">
@@ -215,6 +215,8 @@
   <ItemGroup>
     <Compile Include="NginxConfiguratorTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SwaggerDescriptorTest.cs" />
+    <Compile Include="SwaggerMonitorTests.cs" />
     <Compile Include="WebDescriptorTest.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -229,6 +231,18 @@
     <ProjectReference Include="..\ClusterKit.Web.NginxConfigurator\ClusterKit.Web.NginxConfigurator.csproj">
       <Project>{81cb9b1a-25b1-46a8-8806-0bcf5595386e}</Project>
       <Name>ClusterKit.Web.NginxConfigurator</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\ClusterKit.Web.Swagger.Messages\ClusterKit.Web.Swagger.Messages.csproj">
+      <Project>{d80f5923-cd1b-4376-bab5-1785ea4395a9}</Project>
+      <Name>ClusterKit.Web.Swagger.Messages</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\ClusterKit.Web.Swagger.Monitor\ClusterKit.Web.Swagger.Monitor.csproj">
+      <Project>{061cc7cb-942a-47d0-8ac9-3ad9ca4a98e8}</Project>
+      <Name>ClusterKit.Web.Swagger.Monitor</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\ClusterKit.Web.Swagger\ClusterKit.Web.Swagger.csproj">
+      <Project>{c483b28a-cdfd-4569-a8f3-cb979fa83e31}</Project>
+      <Name>ClusterKit.Web.Swagger</Name>
     </ProjectReference>
     <ProjectReference Include="..\ClusterKit.Web\ClusterKit.Web.csproj">
       <Project>{477b201a-a30c-4360-b56a-6f61c049bb04}</Project>
