--- a/ClusterKit.Core/ClusterKit.Core.Tests/ClusterKit.Core.Tests.csproj
+++ b/ClusterKit.Core/ClusterKit.Core.Tests/ClusterKit.Core.Tests.csproj
@@ -175,6 +175,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AkkaTest\DeployerFallbackTest.cs" />
     <Compile Include="ConceptProof\AkkaClusterTest.cs" />
     <Compile Include="Configuration\ConfigurationTest.cs" />
     <Compile Include="Ping\PingTest.cs" />
