--- a/ClusterKit.Web/ClusterKit.Web.Tests/ClusterKit.Web.Tests.csproj
+++ b/ClusterKit.Web/ClusterKit.Web.Tests/ClusterKit.Web.Tests.csproj
@@ -93,14 +93,14 @@
       <HintPath>..\..\packages\Castle.Windsor.3.3.0\lib\net45\Castle.Windsor.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="ClusterKit.Core">
+    <Reference Include="ClusterKit.Core, Version=0.0.0.64, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>D:\Dropbox\Sources\Git\ClusterKit\build\clean\ClusterKit.Core\ClusterKit.Core.dll</HintPath>
+      <HintPath>..\..\packages\ClusterKit.Core.0.0.0.64-master\lib\ClusterKit.Core.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="ClusterKit.Core.TestKit, Version=0.0.0.61, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="ClusterKit.Core.TestKit, Version=0.0.0.64, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\packages\ClusterKit.Core.TestKit.0.0.0.61-master\lib\ClusterKit.Core.TestKit.dll</HintPath>
+      <HintPath>..\..\packages\ClusterKit.Core.TestKit.0.0.0.64-master\lib\ClusterKit.Core.TestKit.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="CommonServiceLocator.WindsorAdapter">
