--- a/ClusterKit.Core/ClusterKit.Core.EF/ClusterKit.Core.EF.csproj
+++ b/ClusterKit.Core/ClusterKit.Core.EF/ClusterKit.Core.EF.csproj
@@ -143,6 +143,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="ClusterKit.Core.EF.nuspec" />
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
