--- a/ClusterKit.Core/ClusterKit.Core.EF/ClusterKit.Core.EF.csproj
+++ b/ClusterKit.Core/ClusterKit.Core.EF/ClusterKit.Core.EF.csproj
@@ -135,6 +135,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BaseConnectionManager.cs" />
     <Compile Include="BaseEntityFrameworkInstaller.cs" />
     <Compile Include="Installer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
