NodeManager database creation and initialization on start

--- a/nuget.config
+++ b/nuget.config
@@ -3,4 +3,8 @@
   <config>
     <add key="repositorypath" value="./packages/" />
   </config>
+  <packageSources>
+    <add key="nuget.org" value="https://api.nuget.org/v3/index.json" />
+    <add key="local" value="./packageOut" /> 
+  </packageSources>
 </configuration>
