--- a/ClusterKit.NodeManager/ClusterKit.NodeManager.ConfigurationSource/packages.config
+++ b/ClusterKit.NodeManager/ClusterKit.NodeManager.ConfigurationSource/packages.config
@@ -9,8 +9,8 @@
   <package id="Akka.Remote" version="1.0.6" targetFramework="net46" />
   <package id="Castle.Core" version="3.3.3" targetFramework="net46" />
   <package id="Castle.Windsor" version="3.3.0" targetFramework="net46" />
-  <package id="ClusterKit.Core" version="0.0.0.78-master" targetFramework="net45" />
-  <package id="ClusterKit.Core.EF" version="0.0.0.78-master" targetFramework="net45" />
+  <package id="ClusterKit.Core" version="0.0.0.0-local" targetFramework="net45" />
+  <package id="ClusterKit.Core.EF" version="0.0.0.0-local" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net46" />
   <package id="Google.ProtocolBuffers" version="2.4.1.555" targetFramework="net46" />
   <package id="Helios" version="1.4.2" targetFramework="net46" />
