--- a/ClusterKit.NodeManager/ClusterKit.NodeManager.Tests/ClusterKit.NodeManager.Tests.csproj
+++ b/ClusterKit.NodeManager/ClusterKit.NodeManager.Tests/ClusterKit.NodeManager.Tests.csproj
@@ -79,38 +79,24 @@
       <HintPath>..\..\packages\Castle.Windsor.3.3.0\lib\net45\Castle.Windsor.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="ClusterKit.Core, Version=0.0.0.78, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="ClusterKit.Core, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\packages\ClusterKit.Core.0.0.0.78-master\lib\ClusterKit.Core.dll</HintPath>
+      <HintPath>..\..\packages\ClusterKit.Core.0.0.0.0-local\lib\ClusterKit.Core.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="ClusterKit.Core.EF, Version=0.0.0.78, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="ClusterKit.Core.EF, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\packages\ClusterKit.Core.EF.0.0.0.78-master\lib\ClusterKit.Core.EF.dll</HintPath>
+      <HintPath>..\..\packages\ClusterKit.Core.EF.0.0.0.0-local\lib\ClusterKit.Core.EF.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="ClusterKit.Core.EF.Npgsql, Version=0.0.0.78, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="ClusterKit.Core.EF.Npgsql, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\packages\ClusterKit.Core.EF.Npgsql.0.0.0.78-master\lib\ClusterKit.Core.EF.Npgsql.dll</HintPath>
+      <HintPath>..\..\packages\ClusterKit.Core.EF.Npgsql.0.0.0.0-local\lib\ClusterKit.Core.EF.Npgsql.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="ClusterKit.Core.TestKit, Version=0.0.0.78, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="ClusterKit.Core.TestKit, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\packages\ClusterKit.Core.TestKit.0.0.0.78-master\lib\ClusterKit.Core.TestKit.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="ClusterKit.Web">
-      <HintPath>..\..\packages\ClusterKit.Web.0.0.0.0-local\lib\ClusterKit.Web.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="ClusterKit.Web.Client, Version=0.0.0.78, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\packages\ClusterKit.Web.Client.0.0.0.78-master\lib\ClusterKit.Web.Client.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="ClusterKit.Web.Descriptor, Version=0.0.0.78, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\packages\ClusterKit.Web.Descriptor.0.0.0.78-master\lib\ClusterKit.Web.Descriptor.dll</HintPath>
+      <HintPath>..\..\packages\ClusterKit.Core.TestKit.0.0.0.0-local\lib\ClusterKit.Core.TestKit.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="EntityFramework">
