--- a/ClusterKit.NodeManager/ClusterKit.NodeManager.Tests/packages.config
+++ b/ClusterKit.NodeManager/ClusterKit.NodeManager.Tests/packages.config
@@ -12,13 +12,10 @@
   <package id="Akka.TestKit.Xunit2" version="1.0.6" targetFramework="net46" />
   <package id="Castle.Core" version="3.3.3" targetFramework="net46" />
   <package id="Castle.Windsor" version="3.3.0" targetFramework="net46" />
-  <package id="ClusterKit.Core" version="0.0.0.78-master" targetFramework="net46" />
-  <package id="ClusterKit.Core.EF" version="0.0.0.78-master" targetFramework="net46" />
-  <package id="ClusterKit.Core.EF.Npgsql" version="0.0.0.78-master" targetFramework="net46" />
-  <package id="ClusterKit.Core.TestKit" version="0.0.0.78-master" targetFramework="net46" />
-  <package id="ClusterKit.Web" version="0.0.0.0-local" targetFramework="net46" />
-  <package id="ClusterKit.Web.Client" version="0.0.0.78-master" targetFramework="net46" />
-  <package id="ClusterKit.Web.Descriptor" version="0.0.0.78-master" targetFramework="net46" />
+  <package id="ClusterKit.Core" version="0.0.0.0-local" targetFramework="net45" />
+  <package id="ClusterKit.Core.EF" version="0.0.0.0-local" targetFramework="net45" />
+  <package id="ClusterKit.Core.EF.Npgsql" version="0.0.0.0-local" targetFramework="net45" />
+  <package id="ClusterKit.Core.TestKit" version="0.0.0.0-local" targetFramework="net45" />
   <package id="CommonServiceLocator" version="1.3" targetFramework="net46" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net46" />
   <package id="EntityFramework6.Npgsql" version="3.0.5" targetFramework="net46" />
