--- a/ClusterKit.NodeManager/ClusterKit.NodeManager/ClusterKit.NodeManager.csproj
+++ b/ClusterKit.NodeManager/ClusterKit.NodeManager/ClusterKit.NodeManager.csproj
@@ -69,28 +69,29 @@
       <HintPath>..\..\packages\Castle.Windsor.3.3.0\lib\net45\Castle.Windsor.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="ClusterKit.Core, Version=0.0.0.78, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="ClusterKit.Core, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\packages\ClusterKit.Core.0.0.0.78-master\lib\ClusterKit.Core.dll</HintPath>
+      <HintPath>..\..\packages\ClusterKit.Core.0.0.0.0-local\lib\ClusterKit.Core.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="ClusterKit.Core.EF, Version=0.0.0.78, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="ClusterKit.Core.EF, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\packages\ClusterKit.Core.EF.0.0.0.78-master\lib\ClusterKit.Core.EF.dll</HintPath>
+      <HintPath>..\..\packages\ClusterKit.Core.EF.0.0.0.0-local\lib\ClusterKit.Core.EF.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="ClusterKit.Web">
+    <Reference Include="ClusterKit.Web, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\packages\ClusterKit.Web.0.0.0.0-local\lib\ClusterKit.Web.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="ClusterKit.Web.Client, Version=0.0.0.78, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="ClusterKit.Web.Client, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\packages\ClusterKit.Web.Client.0.0.0.78-master\lib\ClusterKit.Web.Client.dll</HintPath>
+      <HintPath>..\..\packages\ClusterKit.Web.0.0.0.0-local\lib\ClusterKit.Web.Client.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="ClusterKit.Web.Descriptor, Version=0.0.0.78, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="ClusterKit.Web.Descriptor, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\packages\ClusterKit.Web.Descriptor.0.0.0.78-master\lib\ClusterKit.Web.Descriptor.dll</HintPath>
+      <HintPath>..\..\packages\ClusterKit.Web.0.0.0.0-local\lib\ClusterKit.Web.Descriptor.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="EntityFramework">
