--- a/ClusterKit.NodeManager/ClusterKit.NodeManager/packages.config
+++ b/ClusterKit.NodeManager/ClusterKit.NodeManager/packages.config
@@ -11,6 +11,7 @@
   <package id="Castle.Windsor" version="3.3.0" targetFramework="net46" />
   <package id="ClusterKit.Core" version="0.0.0.0-local" targetFramework="net45" />
   <package id="ClusterKit.Core.EF" version="0.0.0.0-local" targetFramework="net45" />
+  <package id="ClusterKit.Core.Rest" version="0.0.0.0-local" targetFramework="net45" />
   <package id="ClusterKit.Web" version="0.0.0.0-local" targetFramework="net45" />
   <package id="ClusterKit.Web.Client" version="0.0.0.0-local" targetFramework="net45" />
   <package id="ClusterKit.Web.Descriptor" version="0.0.0.0-local" targetFramework="net45" />
