--- a/ClusterKit.NodeManager/ClusterKit.NodeManager.Tests/packages.config
+++ b/ClusterKit.NodeManager/ClusterKit.NodeManager.Tests/packages.config
@@ -15,6 +15,7 @@
   <package id="ClusterKit.Core" version="0.0.0.0-local" targetFramework="net45" />
   <package id="ClusterKit.Core.EF" version="0.0.0.0-local" targetFramework="net45" />
   <package id="ClusterKit.Core.EF.Npgsql" version="0.0.0.0-local" targetFramework="net45" />
+  <package id="ClusterKit.Core.Rest" version="0.0.0.0-local" targetFramework="net45" />
   <package id="ClusterKit.Core.TestKit" version="0.0.0.0-local" targetFramework="net45" />
   <package id="CommonServiceLocator" version="1.3" targetFramework="net46" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net46" />
