--- a/ClusterKit.NodeManager/ClusterKit.NodeManager/ClusterKit.NodeManager.csproj
+++ b/ClusterKit.NodeManager/ClusterKit.NodeManager/ClusterKit.NodeManager.csproj
@@ -93,6 +93,10 @@
       <HintPath>..\..\packages\ClusterKit.Web.0.0.0.0-local\lib\ClusterKit.Web.Client.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="ClusterKit.Web.CRUDS">
+      <HintPath>..\..\packages\ClusterKit.Web.CRUDS.0.0.0.0-local\lib\ClusterKit.Web.CRUDS.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="ClusterKit.Web.Descriptor, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\packages\ClusterKit.Web.0.0.0.0-local\lib\ClusterKit.Web.Descriptor.dll</HintPath>
@@ -204,7 +208,7 @@
     <Compile Include="ConfigurationDbWorker.cs" />
     <Compile Include="Installer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="WebApi\NodeTemplateRestController.cs" />
+    <Compile Include="WebApi\NodeTemplatesController.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
