--- a/ClusterKit.NodeManager/ClusterKit.NodeManager/packages.config
+++ b/ClusterKit.NodeManager/ClusterKit.NodeManager/packages.config
@@ -14,6 +14,7 @@
   <package id="ClusterKit.Core.Rest" version="0.0.0.0-local" targetFramework="net45" />
   <package id="ClusterKit.Web" version="0.0.0.0-local" targetFramework="net45" />
   <package id="ClusterKit.Web.Client" version="0.0.0.0-local" targetFramework="net45" />
+  <package id="ClusterKit.Web.CRUDS" version="0.0.0.0-local" targetFramework="net45" />
   <package id="ClusterKit.Web.Descriptor" version="0.0.0.0-local" targetFramework="net45" />
   <package id="CommonServiceLocator" version="1.3" targetFramework="net46" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net46" />
