--- a/ClusterKit.Web/ClusterKit.Web/packages.config
+++ b/ClusterKit.Web/ClusterKit.Web/packages.config
@@ -2,13 +2,14 @@
 <packages>
   <package id="Akka" version="1.0.6" targetFramework="net45" />
   <package id="Akka.Cluster" version="1.0.6.17-beta" targetFramework="net45" />
+  <package id="Akka.Cluster.Tools" version="1.0.6" targetFramework="net45" />
   <package id="Akka.DI.CastleWindsor" version="1.0.6" targetFramework="net45" />
   <package id="Akka.DI.Core" version="1.0.6" targetFramework="net45" />
   <package id="Akka.Logger.Serilog" version="1.0.6" targetFramework="net45" />
   <package id="Akka.Remote" version="1.0.6" targetFramework="net45" />
   <package id="Castle.Core" version="3.3.3" targetFramework="net46" />
   <package id="Castle.Windsor" version="3.3.0" targetFramework="net46" />
-  <package id="ClusterKit.Core" version="0.0.0.69-master" targetFramework="net45" />
+  <package id="ClusterKit.Core" version="0.0.0.0-local" targetFramework="net45" />
   <package id="CommonServiceLocator" version="1.3" targetFramework="net46" />
   <package id="Google.ProtocolBuffers" version="2.4.1.555" targetFramework="net46" />
   <package id="Helios" version="1.4.2" targetFramework="net45" />
