--- a/ClusterKit.NodeManager/ClusterKit.NodeManager.ConfigurationSource/ClusterKit.NodeManager.ConfigurationSource.csproj
+++ b/ClusterKit.NodeManager/ClusterKit.NodeManager.ConfigurationSource/ClusterKit.NodeManager.ConfigurationSource.csproj
@@ -79,12 +79,20 @@
       <HintPath>..\..\packages\ClusterKit.Core.EF.0.0.0.0-local\lib\ClusterKit.Core.EF.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="ClusterKit.Core.Rest">
+      <HintPath>..\..\packages\ClusterKit.Core.Rest.0.0.0.0-local\lib\ClusterKit.Core.Rest.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="EntityFramework">
       <HintPath>..\..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="EntityFramework.SqlServer">
       <HintPath>..\..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="EntityFramework6.Npgsql">
+      <HintPath>..\..\packages\EntityFramework6.Npgsql.3.0.5\lib\net45\EntityFramework6.Npgsql.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Google.ProtocolBuffers">
@@ -107,6 +115,10 @@
     <Reference Include="Newtonsoft.Json, Version=8.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\packages\Newtonsoft.Json.8.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Npgsql">
+      <HintPath>..\..\packages\Npgsql.3.0.5\lib\net45\Npgsql.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Serilog">
@@ -133,9 +145,22 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ConfigurationContext.cs" />
+    <Compile Include="Configurations.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Configurations.resx</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\201603060827581_Init.cs" />
     <Compile Include="Migrations\201603060827581_Init.Designer.cs">
       <DependentUpon>201603060827581_Init.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201603121111201_NodeTemplatesFields.cs" />
+    <Compile Include="Migrations\201603121111201_NodeTemplatesFields.Designer.cs">
+      <DependentUpon>201603121111201_NodeTemplatesFields.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201603121619169_NodeTemplateVersion.cs" />
+    <Compile Include="Migrations\201603121619169_NodeTemplateVersion.Designer.cs">
+      <DependentUpon>201603121619169_NodeTemplateVersion.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="NodeTemplate.cs" />
@@ -144,12 +169,29 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+    <None Include="Resources\empty.hocon" />
+    <None Include="Resources\clusterManager.hocon" />
+    <None Include="Resources\seed.hocon" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Configurations.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Configurations.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201603060827581_Init.resx">
       <DependentUpon>201603060827581_Init.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201603121111201_NodeTemplatesFields.resx">
+      <DependentUpon>201603121111201_NodeTemplatesFields.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201603121619169_NodeTemplateVersion.resx">
+      <DependentUpon>201603121619169_NodeTemplateVersion.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="AddMigrationCommands.txt" />
+  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
