--- a/ClusterKit.NodeManager/ClusterKit.NodeManager.ConfigurationSource/packages.config
+++ b/ClusterKit.NodeManager/ClusterKit.NodeManager.ConfigurationSource/packages.config
@@ -11,12 +11,15 @@
   <package id="Castle.Windsor" version="3.3.0" targetFramework="net46" />
   <package id="ClusterKit.Core" version="0.0.0.0-local" targetFramework="net45" />
   <package id="ClusterKit.Core.EF" version="0.0.0.0-local" targetFramework="net45" />
+  <package id="ClusterKit.Core.Rest" version="0.0.0.0-local" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net46" />
+  <package id="EntityFramework6.Npgsql" version="3.0.5" targetFramework="net45" />
   <package id="Google.ProtocolBuffers" version="2.4.1.555" targetFramework="net46" />
   <package id="Helios" version="1.4.2" targetFramework="net46" />
   <package id="JetBrains.Annotations" version="10.1.2-eap" targetFramework="net46" />
   <package id="Microsoft.Bcl.Immutable" version="1.0.34" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="8.0.2" targetFramework="net46" />
+  <package id="Npgsql" version="3.0.5" targetFramework="net45" />
   <package id="Serilog" version="1.5.14" targetFramework="net46" />
   <package id="System.Collections" version="4.0.0" targetFramework="net46" />
   <package id="System.Collections.Immutable" version="1.1.37" targetFramework="net46" />
