Node shutdown message and graceful stop of system

--- a/ClusterKit.NodeManager/ClusterKit.NodeManager.Client/ClusterKit.NodeManager.Client.csproj
+++ b/ClusterKit.NodeManager/ClusterKit.NodeManager.Client/ClusterKit.NodeManager.Client.csproj
@@ -129,6 +129,7 @@
     <Compile Include="Installer.cs" />
     <Compile Include="Messages\NodeDescription.cs" />
     <Compile Include="Messages\NodeDescriptionRequest.cs" />
+    <Compile Include="Messages\ShutdownMessage.cs" />
     <Compile Include="NodeManagerReceiverActor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
